--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
-GITHUB_ID="someid"
-GITHUB_SECRET="somesecret"
+GITHUB_ID="781943541e1e257f0cc4"
+GITHUB_SECRET="358b4eb0e526956fffe4267e4d002308903d2b36"
+NEXTAUTH_SECRET="Fg4Z1D6844iZH+tsQa8A93QkUt7N+jq60zspm0zkS7g="
+NEXTAUTH_URL="http://localhost:3000"
+
+# for internal use
+NEXTAUTH_URL_INTERNAL="http://localhost:3000"
+
