--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "next-intl": "3.0.0-beta.15",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
