--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prisma": "^5.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.46.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
