--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cuid": "^3.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "lottie-react": "^2.4.0",
