--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "discord-clone",
   "version": "0.1.0",
   "private": true,
+  "module": "src/index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "elysa:dev": "bun run --watch server.ts"
   },
   "dependencies": {
+    "@elysiajs/eden": "^0.6.4",
+    "@elysiajs/swagger": "^0.6.2",
     "@hookform/resolvers": "^3.3.1",
     "@prisma/client": "5.2.0",
     "@radix-ui/react-avatar": "^1.0.3",
@@ -26,6 +30,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cuid": "^3.0.0",
+    "elysia": "^0.6.22",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "lottie-react": "^2.4.0",
@@ -48,6 +53,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "bun-types": "^1.0.1",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4"
   }
