feat: server nav sidebar

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ NEXTAUTH_URL="http://localhost:3000"
 # for internal use
 NEXTAUTH_URL_INTERNAL="http://localhost:3000"
 
+DATABASE_URL="postgres://admin:adminadmin@localhost:5432/discord-clone"
+NEXT_PUBLIC_UPLOAD_SERVER="http://localhost:3100"
