--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.1",
     "@prisma/client": "5.2.0",
     "@radix-ui/react-avatar": "^1.0.3",
@@ -17,12 +19,14 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.3",
+    "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@tanstack/react-query": "^4.35.3",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -32,11 +36,13 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "cuid": "^3.0.0",
+    "date-fns": "^2.30.0",
+    "emoji-mart": "^5.5.2",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "13.4.12",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.274.0",
-    "next": "13.4.19",
+    "next": "13.4.12",
     "next-auth": "^4.23.1",
     "next-intl": "3.0.0-beta.15",
     "next-themes": "^0.2.1",
